--- a/trade-order.html
+++ b/trade-order.html
@@ -225,83 +225,171 @@
             </div>
 
             <div class="trade-panel-col">
-                <div class="trade-panel-btn">
-                    <button class="btn btn-trade background-green-light">Buy</button>
-                    <button class="btn btn-trade background-black-light">Sell</button>
-                </div>
+                <div class="trade-order-tab">
+                    <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+                        <li class="nav-item" role="presentation">
+                            <a class="nav-buy nav-link active" id="pills-buy-tab" data-bs-toggle="pill" href="#pills-buy"
+                               role="tab" aria-controls="pills-buy" aria-selected="true">Buy</a>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                            <a class="nav-sell nav-link" id="pills-sell-tab" data-bs-toggle="pill" href="#pills-sell"
+                               role="tab" aria-controls="pills-sell" aria-selected="false">Sell</a>
+                        </li>
+                    </ul>
+                    <div class="tab-content" id="pills-tabContent">
+                        <div class="tab-pane fade show active" id="pills-buy" role="tabpanel"
+                             aria-labelledby="pills-buy-tab">
+                            <div class="trade-panel-input">
+                                <select name="trade" class="form-select">
+                                    <option value="Limit">Limit</option>
+                                    <option value="Limit">Limit</option>
+                                    <option value="Limit">Limit</option>
+                                </select>
 
-                <div class="trade-panel-input">
-                    <select name="trade" class="form-select">
-                        <option value="Limit">Limit</option>
-                        <option value="Limit">Limit</option>
-                        <option value="Limit">Limit</option>
-                    </select>
-
-                    <div class="trade-panel-qty">
-                        <button class="trade-qty-minus">
-                            <img src="img/ui/icon-minus.png" alt="minus">
-                        </button>
-                        <input type="number" name="qty" value="16040">
-                        <button class="trade-qty-plus">
-                            <img src="img/ui/icon-plus.png" alt="plus">
-                        </button>
-                    </div>
-
-                    <div class="trade-panel-qty">
-                        <button class="trade-qty-minus">
-                            <img src="img/ui/icon-minus.png" alt="minus">
-                        </button>
-                        <input type="number" name="qty" placeholder="Amount (BTC)">
-                        <button class="trade-qty-plus">
-                            <img src="img/ui/icon-plus.png" alt="plus">
-                        </button>
-                    </div>
-
-                    <div class="trade-panel-slider">
-                        <div id="trade-main-slide">
-                            <div class="slide-icon-bg-wrap">
-                                <div class="trade-slide-bg-icon bg-icon-1"></div>
-                                <div class="slide-icon-bg-value value-25">
-                                    25%
+                                <div class="trade-panel-qty">
+                                    <button class="trade-qty-minus">
+                                        <img src="img/ui/icon-minus.png" alt="minus">
+                                    </button>
+                                    <input type="number" name="qty" value="16040">
+                                    <button class="trade-qty-plus">
+                                        <img src="img/ui/icon-plus.png" alt="plus">
+                                    </button>
                                 </div>
-                            </div>
-                            <div class="slide-icon-bg-wrap">
-                                <div class="trade-slide-bg-icon bg-icon-2"></div>
-                                <div class="slide-icon-bg-value value-50">
-                                    50%
+
+                                <div class="trade-panel-qty">
+                                    <button class="trade-qty-minus">
+                                        <img src="img/ui/icon-minus.png" alt="minus">
+                                    </button>
+                                    <input type="number" name="qty" placeholder="Amount (BTC)">
+                                    <button class="trade-qty-plus">
+                                        <img src="img/ui/icon-plus.png" alt="plus">
+                                    </button>
                                 </div>
-                            </div>
-                            <div class="slide-icon-bg-wrap">
-                                <div class="trade-slide-bg-icon bg-icon-3"></div>
-                                <div class="slide-icon-bg-value value-75">
-                                    75%
+
+                                <div class="trade-panel-slider">
+                                    <div id="trade-main-slide">
+                                        <div class="slide-icon-bg-wrap">
+                                            <div class="trade-slide-bg-icon bg-icon-1"></div>
+                                            <div class="slide-icon-bg-value value-25">
+                                                25%
+                                            </div>
+                                        </div>
+                                        <div class="slide-icon-bg-wrap">
+                                            <div class="trade-slide-bg-icon bg-icon-2"></div>
+                                            <div class="slide-icon-bg-value value-50">
+                                                50%
+                                            </div>
+                                        </div>
+                                        <div class="slide-icon-bg-wrap">
+                                            <div class="trade-slide-bg-icon bg-icon-3"></div>
+                                            <div class="slide-icon-bg-value value-75">
+                                                75%
+                                            </div>
+                                        </div>
+                                        <div class="slide-icon-bg-wrap">
+                                            <div class="trade-slide-bg-icon bg-icon-4"></div>
+                                            <div class="slide-icon-bg-value value-100">
+                                                100%
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="slide-icon-bg-wrap">
-                                <div class="trade-slide-bg-icon bg-icon-4"></div>
-                                <div class="slide-icon-bg-value value-100">
-                                    100%
+
+                                <div class="trade-panel-sum">
+                                    <input type="text" placeholder="Total (USDT)" class="background-black">
+                                </div>
+
+                                <div class="trade-panel-avbl">
+                                    <div class="trade-panel-avbl-title">
+                                        Avbl
+                                    </div>
+
+                                    <div class="trade-panel-avbl-value">
+                                        9375.86512621 USDT
+                                    </div>
+                                </div>
+
+                                <div class="trade-panel-buy">
+                                    <button class="btn background-green-light">Buy BTC</button>
                                 </div>
                             </div>
                         </div>
-                    </div>
+                        <div class="tab-pane fade" id="pills-sell" role="tabpanel" aria-labelledby="pills-sell-tab">
+                            <div class="trade-panel-input">
+                                <select name="trade" class="form-select">
+                                    <option value="Limit">Limit</option>
+                                    <option value="Limit">Limit</option>
+                                    <option value="Limit">Limit</option>
+                                </select>
 
-                    <div class="trade-panel-sum">
-                        <input type="text" placeholder="Total (USDT)" class="background-black">
-                    </div>
+                                <div class="trade-panel-qty">
+                                    <button class="trade-qty-minus">
+                                        <img src="img/ui/icon-minus.png" alt="minus">
+                                    </button>
+                                    <input type="number" name="qty" value="16040">
+                                    <button class="trade-qty-plus">
+                                        <img src="img/ui/icon-plus.png" alt="plus">
+                                    </button>
+                                </div>
 
-                    <div class="trade-panel-avbl">
-                        <div class="trade-panel-avbl-title">
-                            Avbl
+                                <div class="trade-panel-qty">
+                                    <button class="trade-qty-minus">
+                                        <img src="img/ui/icon-minus.png" alt="minus">
+                                    </button>
+                                    <input type="number" name="qty" placeholder="Amount (BTC)">
+                                    <button class="trade-qty-plus">
+                                        <img src="img/ui/icon-plus.png" alt="plus">
+                                    </button>
+                                </div>
+
+                                <div class="trade-panel-slider">
+                                    <div id="trade-main-slide">
+                                        <div class="slide-icon-bg-wrap">
+                                            <div class="trade-slide-bg-icon bg-icon-1"></div>
+                                            <div class="slide-icon-bg-value value-25">
+                                                25%
+                                            </div>
+                                        </div>
+                                        <div class="slide-icon-bg-wrap">
+                                            <div class="trade-slide-bg-icon bg-icon-2"></div>
+                                            <div class="slide-icon-bg-value value-50">
+                                                50%
+                                            </div>
+                                        </div>
+                                        <div class="slide-icon-bg-wrap">
+                                            <div class="trade-slide-bg-icon bg-icon-3"></div>
+                                            <div class="slide-icon-bg-value value-75">
+                                                75%
+                                            </div>
+                                        </div>
+                                        <div class="slide-icon-bg-wrap">
+                                            <div class="trade-slide-bg-icon bg-icon-4"></div>
+                                            <div class="slide-icon-bg-value value-100">
+                                                100%
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="trade-panel-sum">
+                                    <input type="text" placeholder="Total (USDT)" class="background-black">
+                                </div>
+
+                                <div class="trade-panel-avbl">
+                                    <div class="trade-panel-avbl-title">
+                                        Avbl
+                                    </div>
+
+                                    <div class="trade-panel-avbl-value">
+                                        9375.86512621 USDT
+                                    </div>
+                                </div>
+
+                                <div class="trade-panel-buy">
+                                    <button class="btn background-red">Sell BTC</button>
+                                </div>
+                            </div>
                         </div>
-
-                        <div class="trade-panel-avbl-value">
-                            9375.86512621 USDT
-                        </div>
-                    </div>
-
-                    <div class="trade-panel-buy">
-                        <button class="btn background-green-light">Buy BTC</button>
                     </div>
                 </div>
             </div>
